modified:   ini.ini

--- a/ini.ini
+++ b/ini.ini
@@ -1,4 +1,4 @@
 [Path]
 RepFolder=C:\Users\xfolderx\AppData\LocalLow\Visionary Realms\Pantheon
 CharacterFolder=\Settings\CharacterSettings
-AppTitle=Éditeur JSON - Macro
+AppTitle=Editeur JSON - Macro
